# grpc_opizontas

./: .env.example  .gitignore  Cargo.toml  README.md  build.rs  config.toml
doc/: CODE_REVIEW.md  HEARTBEAT_ISSUE.md  USAGE_GUIDE.md  architecture.md  how_to_use.md  how_to_user.md  init.md  review_and_refactor_plan.md
doc/post/: post.md  recommendation_api.md
doc/proto/: post.proto  recommendation.proto
doc/use/: api_consumer_guide.md  go_client_guide.md  service_integration_guide.md
proto/: registry.proto
src/: config.rs  gateway_client.rs  main.rs  server.rs
src/services/: client_manager.rs  gateway_client.rs  mod.rs  registry_service.rs  reverse_connection_manager.rs  router_service.rs
src/services/client/: config.rs  error.rs  event_client.rs  generic.rs  mod.rs  streaming.rs
src/services/connection/: cleanup.rs  connection.rs  handler.rs  manager.rs  mod.rs  service_pool.rs  types.rs
src/services/event/: event_bus.rs  mod.rs  types.rs
src/services/registry/: grpc_impl.rs  mod.rs  service.rs  types.rs
src/services/router/: error.rs  extractor.rs  forwarder.rs  mod.rs  response.rs
tests/: event_pubsub_test.rs
