[package]
name = "grpc_opizontas"
version = "0.0.1"
edition = "2024"

[dependencies]
tonic = "0.14.1"
tonic-prost = "0.14.1"
prost = "0.14.1"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
futures = "0.3"
http = "1.0"
http-body = "1.0"
tower = { version = "0.5.2", features = ["util"] }
http-body-util = "0.1"
bytes = "1.0"
serde = { version = "1.0", features = ["derive"] }
toml = "0.9.5"

[build-dependencies]
tonic-prost-build = "0.14.1"
